--- a/blogpost.html
+++ b/blogpost.html
@@ -7,9 +7,9 @@
 <body>
     <div id="container">
     <div id="cabecera"></div>
-    cabecera
+    cabecera genial jeje
     <div id="post">
-    <h1>Este es el titulo atractivo e interesante del post</h1>
+    <h1>Este es el titulo atractivo e interesante del pooooooooooooooooooooost</h1>
     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
 </body>
 </html>
