--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>El titulo del post que novedad, cierto</title>
+    <title>El titulo del post que novedad, cierto, muy charro</title>
     <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
