--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,8 @@
 <body>
     <div> id="container"</div>
     <div  id="post"></div>
-    <h1>Este es el titulo mas sexy del mundooo mundiaaaaaaaaaaaaaaaal</h1>
+    <h1> te amo con todo el corazón y iiqiiqaasnblkpowerjfsdfioqq
+	    Este es el titulo mas sexy del mundooo mundiaaaaaaaaaaaaaaaal</h1>
     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-</body>
+/body>
 </html>
